# mqtt-broker

./: Cargo.toml
agent/: Cargo.toml
agent/src/: broker_tools.rs  lib.rs  main.rs  voice_loop.rs  voice_text.rs
agent/src/skills/: mod.rs  mqtt_manager.rs
api/: Cargo.toml
api/src/: auth.rs  handlers.rs  lib.rs  middleware.rs  models.rs  routes.rs
app/: Cargo.toml
app/soul_defaults/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
app/src/: main.rs  soul.rs
broker/: Cargo.toml
broker/src/: auth.rs  connection.rs  engine.rs  lib.rs  management.rs  packet.rs  session.rs  state.rs  storage.rs  subscription.rs
broker/tests/: management_channel.rs
common/: Cargo.toml
common/src/: lib.rs
config/: broker.yaml
docs/: api.md  architecture.md
scripts/: download_voice_models.sh  setup_sherpa_libs.sh
server/: Cargo.toml
server/src/: main.rs
voice/: Cargo.toml
voice/docs/: pipeline.md
voice/examples/: tts_device_diag.rs  tts_playback_probe.rs  tts_probe.rs
voice/src/: asr.rs  audio.rs  audio_devices.rs  cpal_capture.rs  cpal_playback.rs  lib.rs  sherpa_asr.rs  sherpa_kws.rs  sherpa_tts.rs  traits.rs  tts.rs  wake.rs
voice/tests/: kws_keywords.rs  mic_probe.rs  silero_vad.rs
