[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
broker = { path = "../broker" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
jsonwebtoken = "9"
tracing = "0.1"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
