[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
broker = { path = "../broker" }
api = { path = "../api" }
common = { path = "../common" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
